[project]
name = "vllm-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "taskipy>=1.14.1",
    "vllm>=0.7.2",
]

[tool.uv]
constraint-dependencies = ["xgrammar==0.1.11"]

[tool.taskipy.tasks]
start = "uv run vllm serve Qwen/Qwen2.5-3-Instruct"